[gd_scene load_steps=10 format=2]

[ext_resource path="res://Textures/Button/ButtonLightWhite.png" type="Texture" id=1]
[ext_resource path="res://Textures/Button/ButtonBack.png" type="Texture" id=2]
[ext_resource path="res://Textures/Button/ButtonLightYellow.png" type="Texture" id=3]
[ext_resource path="res://Textures/Button/ButtonLightRed.png" type="Texture" id=4]
[ext_resource path="res://Textures/Button/ButtonLightGreen.png" type="Texture" id=5]
[ext_resource path="res://Parts/Interactables/Button.gd" type="Script" id=6]
[ext_resource path="res://Textures/Button/ButtonHighlight.png" type="Texture" id=7]


[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "CanClose",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "CanOpen",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "Automatic",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "Locked",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 37.4472
height = 78.675

[node name="Button" type="Area2D" groups=[
"interactable",
]]
script = ExtResource( 6 )

[node name="ButtonHighlight" type="Sprite" parent="."]
visible = false
texture = ExtResource( 7 )

[node name="ButtonBack" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="ButtonLight" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "Automatic"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
